# deeplearningpp1

./: README.md
assignment_1/: .gitignore  pyproject.toml
assignment_1/.spyproject/config/: workspace.ini
assignment_1/assignment_1/: dataset.py  logger.py  main.py  mainconfig.toml  tester.py  trainer.py  util_file.py
assignment_1/assignment_1/models/: __init__.py  vgg.py
assignment_1/assignment_1/output_dir/logger/: events.out.tfevents.1614653117.venkat-Alienware-15-R3.103395.0  events.out.tfevents.1614653159.venkat-Alienware-15-R3.103475.0  events.out.tfevents.1614655920.venkat-Alienware-15-R3.104562.0  events.out.tfevents.1614658735.venkat-Alienware-15-R3.106925.0  events.out.tfevents.1614659829.venkat-Alienware-15-R3.107902.0  events.out.tfevents.1614659898.venkat-Alienware-15-R3.108012.0  events.out.tfevents.1614660117.venkat-Alienware-15-R3.108248.0  events.out.tfevents.1614660714.venkat-Alienware-15-R3.108707.0  events.out.tfevents.1614660731.venkat-Alienware-15-R3.108777.0  events.out.tfevents.1614660764.venkat-Alienware-15-R3.108863.0  events.out.tfevents.1614660768.venkat-Alienware-15-R3.108863.1  events.out.tfevents.1614660789.venkat-Alienware-15-R3.108964.0  events.out.tfevents.1614660793.venkat-Alienware-15-R3.108964.1  events.out.tfevents.1614660847.venkat-Alienware-15-R3.109063.0  events.out.tfevents.1614660850.venkat-Alienware-15-R3.109063.1  events.out.tfevents.1614660872.venkat-Alienware-15-R3.109176.0  events.out.tfevents.1614660876.venkat-Alienware-15-R3.109176.1  (+25 more)
assignment_1/tests/: test_assignment_1.py
task1/: mine.py  mlnn.py  (+1 more)
(+3 files in other folders)
