[tool.poetry]
name = "assignment_1"
version = "0.1.0"
description = ""
authors = ["venkat <vb19h@my.fsu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
pandas = "^1.2.2"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
Pillow = "^8.1.0"
wget = "^3.2"
torchvision = "^0.8.2"
torchaudio = "^0.7.2"
toml = "^0.10.2"
torchsummary = "^1.5.1"
tensorboard = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
